gen/java_parser.output
Terminals unused in grammar

    INSTANCEOF


Grammar

    0 $accept: start $end

    1 start: main_program

    2 nested_id: ID '.' nested_id
    3          | ID

    4 opt_var_access: '.' var
    5               | %empty

    6 var: ID opt_array opt_var_access

    7 type: nested_id opt_array_type

    8 opt_array_type: ARRAY opt_array_type
    9               | %empty

   10 opt_array: '[' expression ']' opt_array
   11          | %empty

   12 equality_operator: EQ
   13                  | NEQ

   14 order_operator: '<'
   15               | '>'
   16               | LEQ
   17               | GEQ

   18 shift_operator: UNSIGNED_RIGHT_SHIFT
   19               | LEFT_SHIFT
   20               | RIGHT_SHIFT

   21 multiplicative_operator: '*'
   22                        | '/'
   23                        | '%'

   24 additive_operator: '+'
   25                  | '-'

   26 logical_operator: LOGICAL_AND
   27                 | LOGICAL_OR

   28 bitwise_operator: '&'
   29                 | '^'
   30                 | '|'

   31 binary_operator: equality_operator
   32                | order_operator
   33                | shift_operator
   34                | logical_operator
   35                | bitwise_operator
   36                | additive_operator
   37                | multiplicative_operator

   38 unary_operator: '!'
   39               | '+'
   40               | '-'
   41               | '~'

   42 opt_unary_operator: unary_operator
   43                   | %empty

   44 unary_special_operator: INCREMENT
   45                       | DECREMENT

   46 fn_call: var '(' args ')' opt_array

   47 opt_var_fn_access: '.' var_fn
   48                  | %empty

   49 var_fn: var
   50       | fn_call opt_var_fn_access

   51 val: var_fn
   52    | TRUE
   53    | FALSE
   54    | INTEGER
   55    | REAL
   56    | CHARACTER
   57    | STRING opt_string_access

   58 opt_string_access: '.' var_fn
   59                  | %empty

   60 assignment_operator: '='
   61                    | SELF_UNSIGNED_RIGHT_SHIFT
   62                    | SELF_RIGHT_SHIFT
   63                    | SELF_LEFT_SHIFT
   64                    | SELF_PLUS
   65                    | SELF_MINUS
   66                    | SELF_TIMES
   67                    | SELF_DIV
   68                    | SELF_MOD
   69                    | SELF_BITWISE_AND
   70                    | SELF_BITWISE_OR
   71                    | SELF_BITWISE_XOR

   72 expression: opt_unary_operator val binary_operator expression
   73           | opt_unary_operator val
   74           | opt_unary_operator '(' expression ')' opt_array
   75           | opt_unary_operator '(' expression ')' opt_array binary_operator expression

   76 statement_s0: ID statement_s1
   77             | '(' expression ')' opt_array
   78             | new_expression
   79             | unary_special_operator var

   80 statement_s1: var_declarations
   81             | '.' ID statement_s1
   82             | '[' expression ']' opt_array statement_s2
   83             | ARRAY var_declarations
   84             | '(' args ')' opt_array statement_s2
   85             | assignment
   86             | binary_operator expression
   87             | unary_special_operator
   88             | %empty

   89 rhs: assignment
   90    | binary_operator expression

   91 statement_s2: '.' val rhs
   92             | rhs
   93             | %empty

   94 new_expression: NEW nested_id new_initialisation

   95 new_initialisation: '(' args ')'
   96                   | '[' expression ']' opt_array opt_array_type
   97                   | ARRAY opt_array_type '{' args '}'

   98 assignable_expression: new_expression
   99                      | expression

  100 obligatory_args: assignable_expression
  101                | assignable_expression ',' obligatory_args

  102 args: obligatory_args
  103     | %empty

  104 opt_variadic: MORE_ARGS
  105             | %empty

  106 obligatory_formal_args: type ID opt_array_type ',' obligatory_formal_args
  107                       | type ID opt_array_type opt_variadic

  108 formal_args: obligatory_formal_args
  109            | %empty

  110 opt_assignment: '=' assignable_expression
  111               | %empty

  112 var_declarations: ID opt_array_type opt_assignment ',' var_declarations
  113                 | ID opt_array_type opt_assignment

  114 statement_declarative: type var_declarations

  115 assignment: assignment_operator expression
  116           | '=' new_expression

  117 assignment_statement: var assignment

  118 statement_pm_1: unary_special_operator var
  119               | var unary_special_operator

  120 statement: statement_s0 ';'
  121          | for_statement
  122          | range_for_statement
  123          | if_statement
  124          | while_statement
  125          | do_while_statement
  126          | switch_statement
  127          | return_statement ';'
  128          | ';'
  129          | error ';'

  130 opt_statement_seq: statement_seq
  131                  | %empty

  132 statement_seq: statement opt_statement_seq
  133              | '{' statement_seq '}' opt_statement_seq
  134              | '{' '}' opt_statement_seq

  135 block: '{' opt_statement_seq '}'

  136 condition: expression

  137 conditional_body: statement
  138                 | block

  139 opt_else_statement: ELSE conditional_body
  140                   | %empty

  141 if_statement: IF '(' condition ')' conditional_body opt_else_statement
  142             | IF '(' error ')' conditional_body opt_else_statement

  143 for_updating_statement: statement_pm_1
  144                       | assignment_statement

  145 for_statement: FOR '(' statement_declarative ';' expression ';' for_updating_statement ')' conditional_body

  146 range_for_statement: FOR '(' type ID ':' val ')' conditional_body
  147                    | FOR '(' error ')' conditional_body

  148 while_statement: WHILE '(' condition ')' conditional_body

  149 do_while_statement: DO '{' statement_seq '}' WHILE '(' condition ')' ';'
  150                   | DO '{' statement_seq '}' WHILE '(' error ')' ';'

  151 switch_statement: SWITCH '(' condition ')' '{' switch_body '}'

  152 case_val: INTEGER
  153         | TRUE
  154         | FALSE
  155         | CHARACTER

  156 switch_label: CASE case_val
  157             | DEFAULT

  158 case_block: switch_label ':' opt_statement_seq

  159 switch_body: case_block switch_body
  160            | %empty

  161 opt_return_expression: new_expression
  162                      | expression
  163                      | %empty

  164 return_statement: RETURN opt_return_expression

  165 cls_modifier: PUBLIC
  166             | %empty

  167 cls_attr_more: ',' ID opt_assignment cls_attr_more
  168              | ';'
  169              | error ';'

  170 cls_attr_sign: opt_assignment cls_attr_more
  171              | '(' formal_args ')' block
  172              | '(' error ')' block

  173 fn_access_modifier: PRIVATE
  174                   | PUBLIC
  175                   | PROTECTED

  176 fn_static_modifier: STATIC

  177 fn_opt_static_modifier: fn_static_modifier
  178                       | %empty

  179 fn_opt_access_modifier: fn_access_modifier
  180                       | %empty

  181 fn_modifier: fn_access_modifier fn_opt_static_modifier
  182            | fn_static_modifier fn_opt_access_modifier
  183            | %empty

  184 fn_declaration: fn_modifier type ID '(' formal_args ')'
  185               | fn_modifier type ID '(' error ')'

  186 cls_declaration: cls_modifier CLASS ID
  187                | cls_modifier CLASS error

  188 cls_info_opt_more: cls_info
  189                  | %empty

  190 cls_info: ABSTRACT fn_declaration ';' cls_info_opt_more
  191         | fn_modifier type ID cls_attr_sign cls_info_opt_more
  192         | ';' cls_info_opt_more

  193 opt_cls_info: cls_info
  194             | %empty

  195 opt_extends: EXTENDS nested_id
  196            | %empty

  197 more_interface_list: ',' interface_list
  198                    | %empty

  199 interface_list: nested_id more_interface_list

  200 opt_implements: IMPLEMENTS interface_list
  201               | %empty

  202 cls_definition: cls_declaration opt_extends opt_implements '{' opt_cls_info '}'
  203               | cls_declaration error '{' opt_cls_info '}'

  204 opt_abstract: ABSTRACT
  205             | %empty

  206 interface_info: opt_abstract fn_declaration ';' interface_info
  207               | ';'
  208               | error ';'
  209               | error block

  210 opt_interface_info: interface_info
  211                   | %empty

  212 interface_declaration: cls_modifier INTERFACE ID
  213                      | cls_modifier INTERFACE error

  214 opt_interface_extends: EXTENDS interface_list
  215                      | %empty

  216 interface_definition: interface_declaration opt_interface_extends '{' opt_interface_info '}'
  217                     | interface_declaration error '{' opt_interface_info '}'

  218 opt_pkg_declaration: PACKAGE nested_id ';'
  219                    | %empty

  220 pkg_import: IMPORT nested_id ';' pkg_import
  221           | %empty

  222 type_definitions: interface_definition type_definitions_more
  223                 | cls_definition type_definitions_more

  224 type_definitions_more: type_definitions
  225                      | %empty

  226 main_program: opt_pkg_declaration pkg_import type_definitions


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 38
    '%' (37) 23
    '&' (38) 28
    '(' (40) 46 74 75 77 84 95 141 142 145 146 147 148 149 150 151 171 172 184 185
    ')' (41) 46 74 75 77 84 95 141 142 145 146 147 148 149 150 151 171 172 184 185
    '*' (42) 21
    '+' (43) 24 39
    ',' (44) 101 106 112 167 197
    '-' (45) 25 40
    '.' (46) 2 4 47 58 81 91
    '/' (47) 22
    ':' (58) 146 158
    ';' (59) 120 127 128 129 145 149 150 168 169 190 192 206 207 208 218 220
    '<' (60) 14
    '=' (61) 60 110 116
    '>' (62) 15
    '[' (91) 10 82 96
    ']' (93) 10 82 96
    '^' (94) 29
    '{' (123) 97 133 134 135 149 150 151 202 203 216 217
    '|' (124) 30
    '}' (125) 97 133 134 135 149 150 151 202 203 216 217
    '~' (126) 41
    error (256) 129 142 147 150 169 172 185 187 203 208 209 213 217
    ID (258) 2 3 6 76 81 106 107 112 113 146 167 184 185 186 191 212
    CHARACTER (259) 56 155
    STRING (260) 57
    INCREMENT (261) 44
    DECREMENT (262) 45
    INTEGER (263) 54 152
    REAL (264) 55
    CLASS (265) 186 187
    ARRAY (266) 8 83 97
    RETURN (267) 164
    INTERFACE (268) 212 213
    ABSTRACT (269) 190 204
    STATIC (270) 176
    EXTENDS (271) 195 214
    IMPLEMENTS (272) 200
    IF (273) 141 142
    ELSE (274) 139
    FOR (275) 145 146 147
    WHILE (276) 148 149 150
    DO (277) 149 150
    SWITCH (278) 151
    CASE (279) 156
    DEFAULT (280) 157
    LEFT_SHIFT (281) 19
    RIGHT_SHIFT (282) 20
    UNSIGNED_RIGHT_SHIFT (283) 18
    LEQ (284) 16
    GEQ (285) 17
    NEQ (286) 13
    EQ (287) 12
    SELF_UNSIGNED_RIGHT_SHIFT (288) 61
    SELF_LEFT_SHIFT (289) 63
    SELF_RIGHT_SHIFT (290) 62
    INSTANCEOF (291)
    MORE_ARGS (292) 104
    NEW (293) 94
    LOGICAL_AND (294) 26
    LOGICAL_OR (295) 27
    TRUE (296) 52 153
    FALSE (297) 53 154
    PACKAGE (298) 218
    IMPORT (299) 220
    SELF_PLUS (300) 64
    SELF_MINUS (301) 65
    SELF_DIV (302) 67
    SELF_MOD (303) 68
    SELF_TIMES (304) 66
    SELF_BITWISE_AND (305) 69
    SELF_BITWISE_OR (306) 70
    SELF_BITWISE_XOR (307) 71
    LOWEST (308)
    PUBLIC (309) 165 174
    PRIVATE (310) 173
    PROTECTED (311) 175


Nonterminals, with rules where they appear

    $accept (80)
        on left: 0
    start (81)
        on left: 1
        on right: 0
    nested_id (82)
        on left: 2 3
        on right: 2 7 94 195 199 218 220
    opt_var_access (83)
        on left: 4 5
        on right: 6
    var (84)
        on left: 6
        on right: 4 46 49 79 117 118 119
    type (85)
        on left: 7
        on right: 106 107 114 146 184 185 191
    opt_array_type (86)
        on left: 8 9
        on right: 7 8 96 97 106 107 112 113
    opt_array (87)
        on left: 10 11
        on right: 6 10 46 74 75 77 82 84 96
    equality_operator (88)
        on left: 12 13
        on right: 31
    order_operator (89)
        on left: 14 15 16 17
        on right: 32
    shift_operator (90)
        on left: 18 19 20
        on right: 33
    multiplicative_operator (91)
        on left: 21 22 23
        on right: 37
    additive_operator (92)
        on left: 24 25
        on right: 36
    logical_operator (93)
        on left: 26 27
        on right: 34
    bitwise_operator (94)
        on left: 28 29 30
        on right: 35
    binary_operator (95)
        on left: 31 32 33 34 35 36 37
        on right: 72 75 86 90
    unary_operator (96)
        on left: 38 39 40 41
        on right: 42
    opt_unary_operator (97)
        on left: 42 43
        on right: 72 73 74 75
    unary_special_operator (98)
        on left: 44 45
        on right: 79 87 118 119
    fn_call (99)
        on left: 46
        on right: 50
    opt_var_fn_access (100)
        on left: 47 48
        on right: 50
    var_fn (101)
        on left: 49 50
        on right: 47 51 58
    val (102)
        on left: 51 52 53 54 55 56 57
        on right: 72 73 91 146
    opt_string_access (103)
        on left: 58 59
        on right: 57
    assignment_operator (104)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 115
    expression (105)
        on left: 72 73 74 75
        on right: 10 72 74 75 77 82 86 90 96 99 115 136 145 162
    statement_s0 (106)
        on left: 76 77 78 79
        on right: 120
    statement_s1 (107)
        on left: 80 81 82 83 84 85 86 87 88
        on right: 76 81
    rhs (108)
        on left: 89 90
        on right: 91 92
    statement_s2 (109)
        on left: 91 92 93
        on right: 82 84
    new_expression (110)
        on left: 94
        on right: 78 98 116 161
    new_initialisation (111)
        on left: 95 96 97
        on right: 94
    assignable_expression (112)
        on left: 98 99
        on right: 100 101 110
    obligatory_args (113)
        on left: 100 101
        on right: 101 102
    args (114)
        on left: 102 103
        on right: 46 84 95 97
    opt_variadic (115)
        on left: 104 105
        on right: 107
    obligatory_formal_args (116)
        on left: 106 107
        on right: 106 108
    formal_args (117)
        on left: 108 109
        on right: 171 184
    opt_assignment (118)
        on left: 110 111
        on right: 112 113 167 170
    var_declarations (119)
        on left: 112 113
        on right: 80 83 112 114
    statement_declarative (120)
        on left: 114
        on right: 145
    assignment (121)
        on left: 115 116
        on right: 85 89 117
    assignment_statement (122)
        on left: 117
        on right: 144
    statement_pm_1 (123)
        on left: 118 119
        on right: 143
    statement (124)
        on left: 120 121 122 123 124 125 126 127 128 129
        on right: 132 137
    opt_statement_seq (125)
        on left: 130 131
        on right: 132 133 134 135 158
    statement_seq (126)
        on left: 132 133 134
        on right: 130 133 149 150
    block (127)
        on left: 135
        on right: 138 171 172 209
    condition (128)
        on left: 136
        on right: 141 148 149 151
    conditional_body (129)
        on left: 137 138
        on right: 139 141 142 145 146 147 148
    opt_else_statement (130)
        on left: 139 140
        on right: 141 142
    if_statement (131)
        on left: 141 142
        on right: 123
    for_updating_statement (132)
        on left: 143 144
        on right: 145
    for_statement (133)
        on left: 145
        on right: 121
    range_for_statement (134)
        on left: 146 147
        on right: 122
    while_statement (135)
        on left: 148
        on right: 124
    do_while_statement (136)
        on left: 149 150
        on right: 125
    switch_statement (137)
        on left: 151
        on right: 126
    case_val (138)
        on left: 152 153 154 155
        on right: 156
    switch_label (139)
        on left: 156 157
        on right: 158
    case_block (140)
        on left: 158
        on right: 159
    switch_body (141)
        on left: 159 160
        on right: 151 159
    opt_return_expression (142)
        on left: 161 162 163
        on right: 164
    return_statement (143)
        on left: 164
        on right: 127
    cls_modifier (144)
        on left: 165 166
        on right: 186 187 212 213
    cls_attr_more (145)
        on left: 167 168 169
        on right: 167 170
    cls_attr_sign (146)
        on left: 170 171 172
        on right: 191
    fn_access_modifier (147)
        on left: 173 174 175
        on right: 179 181
    fn_static_modifier (148)
        on left: 176
        on right: 177 182
    fn_opt_static_modifier (149)
        on left: 177 178
        on right: 181
    fn_opt_access_modifier (150)
        on left: 179 180
        on right: 182
    fn_modifier (151)
        on left: 181 182 183
        on right: 184 185 191
    fn_declaration (152)
        on left: 184 185
        on right: 190 206
    cls_declaration (153)
        on left: 186 187
        on right: 202 203
    cls_info_opt_more (154)
        on left: 188 189
        on right: 190 191 192
    cls_info (155)
        on left: 190 191 192
        on right: 188 193
    opt_cls_info (156)
        on left: 193 194
        on right: 202 203
    opt_extends (157)
        on left: 195 196
        on right: 202
    more_interface_list (158)
        on left: 197 198
        on right: 199
    interface_list (159)
        on left: 199
        on right: 197 200 214
    opt_implements (160)
        on left: 200 201
        on right: 202
    cls_definition (161)
        on left: 202 203
        on right: 223
    opt_abstract (162)
        on left: 204 205
        on right: 206
    interface_info (163)
        on left: 206 207 208 209
        on right: 206 210
    opt_interface_info (164)
        on left: 210 211
        on right: 216 217
    interface_declaration (165)
        on left: 212 213
        on right: 216 217
    opt_interface_extends (166)
        on left: 214 215
        on right: 216
    interface_definition (167)
        on left: 216 217
        on right: 222
    opt_pkg_declaration (168)
        on left: 218 219
        on right: 226
    pkg_import (169)
        on left: 220 221
        on right: 220 226
    type_definitions (170)
        on left: 222 223
        on right: 224 226
    type_definitions_more (171)
        on left: 224 225
        on right: 222 223
    main_program (172)
        on left: 226
        on right: 1


State 0

    0 $accept: • start $end

    PACKAGE  shift, and go to state 1

    $default  reduce using rule 219 (opt_pkg_declaration)

    start                go to state 2
    opt_pkg_declaration  go to state 3
    main_program         go to state 4


State 1

  218 opt_pkg_declaration: PACKAGE • nested_id ';'

    ID  shift, and go to state 5

    nested_id  go to state 6


State 2

    0 $accept: start • $end

    $end  shift, and go to state 7


State 3

  226 main_program: opt_pkg_declaration • pkg_import type_definitions

    IMPORT  shift, and go to state 8

    $default  reduce using rule 221 (pkg_import)

    pkg_import  go to state 9


State 4

    1 start: main_program •

    $default  reduce using rule 1 (start)


State 5

    2 nested_id: ID • '.' nested_id
    3          | ID •

    '.'  shift, and go to state 10

    $default  reduce using rule 3 (nested_id)


State 6

  218 opt_pkg_declaration: PACKAGE nested_id • ';'

    ';'  shift, and go to state 11


State 7

    0 $accept: start $end •

    $default  accept


State 8

  220 pkg_import: IMPORT • nested_id ';' pkg_import

    ID  shift, and go to state 5

    nested_id  go to state 12


State 9

  226 main_program: opt_pkg_declaration pkg_import • type_definitions

    PUBLIC  shift, and go to state 13

    $default  reduce using rule 166 (cls_modifier)

    cls_modifier           go to state 14
    cls_declaration        go to state 15
    cls_definition         go to state 16
    interface_declaration  go to state 17
    interface_definition   go to state 18
    type_definitions       go to state 19


State 10

    2 nested_id: ID '.' • nested_id

    ID  shift, and go to state 5

    nested_id  go to state 20


State 11

  218 opt_pkg_declaration: PACKAGE nested_id ';' •

    $default  reduce using rule 218 (opt_pkg_declaration)


State 12

  220 pkg_import: IMPORT nested_id • ';' pkg_import

    ';'  shift, and go to state 21


State 13

  165 cls_modifier: PUBLIC •

    $default  reduce using rule 165 (cls_modifier)


State 14

  186 cls_declaration: cls_modifier • CLASS ID
  187                | cls_modifier • CLASS error
  212 interface_declaration: cls_modifier • INTERFACE ID
  213                      | cls_modifier • INTERFACE error

    CLASS      shift, and go to state 22
    INTERFACE  shift, and go to state 23


State 15

  202 cls_definition: cls_declaration • opt_extends opt_implements '{' opt_cls_info '}'
  203               | cls_declaration • error '{' opt_cls_info '}'

    error    shift, and go to state 24
    EXTENDS  shift, and go to state 25

    IMPLEMENTS  reduce using rule 196 (opt_extends)
    '{'         reduce using rule 196 (opt_extends)

    opt_extends  go to state 26


State 16

  223 type_definitions: cls_definition • type_definitions_more

    PUBLIC  shift, and go to state 13

    $end      reduce using rule 225 (type_definitions_more)
    $default  reduce using rule 166 (cls_modifier)

    cls_modifier           go to state 14
    cls_declaration        go to state 15
    cls_definition         go to state 16
    interface_declaration  go to state 17
    interface_definition   go to state 18
    type_definitions       go to state 27
    type_definitions_more  go to state 28


State 17
